# python-kubernetes

./: Dockerfile  README.md  main.py  pyproject.toml
data/: sample.csv
infra/: deployment.yaml  service.yaml
